continuing with basic constructs

--- a/index.jade
+++ b/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
 	head
 		title T9 Coding Challenge
+		link(href="/stylesheets/screen.css", rel="stylesheet", type="text/css")
 	body
-		h1 Hello World
 		script(src="js/coffee-script.js")
+		script(src="cs/main.coffee", type="text/coffeescript")
