--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,6 +4,7 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+@import "compass/css3/transition";
 
 $wrapperWidth: 500px;
 $keyContainerWidth: 250px;
@@ -31,13 +32,20 @@ body {
 				height: 2em;
 				text-align: center;
 				color: white;
-				background: hsla(0,0,100,0.25);
+				background: hsla(0,0,100,0.2);
 				outline: none;
 				border: none;
 				padding: 0;
 				width: 100%;
+				@include transition(all, 0.5s);
+				&:hover {
+					background: hsla(0,0,100,0.25);
+				}
+				&:active {
+					background: hsla(0,0,100,0.3);
+				}
 			}
-			input {
+			#input {
 				line-height: 2em;
 				@include defaultStyle;
 				margin: 0 auto;
@@ -77,21 +85,39 @@ body {
 		}
 		#suggestions {
 			display: inline-block;
-			width: $suggestionsWidth;
-			height: $keyContainerHeight;
+			width: $suggestionsWidth - 20px;
+			height: $keyContainerHeight - 30px;
 			margin: 10px 0;
 			background: hsla(0,0,0,0.8);
 			color: white;
 			vertical-align: top;
 			font-size: 16px;
 			border-radius: 0 5px 5px 0;
+			overflow: scroll;
+			padding: 15px 10px;
+			#show-words {
+				border-radius: 5px;
+				display: block;
+				padding: 0.5em;
+				background: hsla(0,0,100,0.25);
+				input {
+					margin-right: 1em;
+				}
+			}
 			ul {
-				padding: 15px;
+				margin-top: 10px;
 				.suggestion {
-					margin: 0.5em 0;
 					height: 1em;
+					margin: 0.1em 0;
+					padding: 0.5em;
+					border-radius: 5px;
+					@include transition(all, 0.5s);
+					background: hsla(0,0,100,0);
 					&.even {
-						background: hsla(0,0,100,0.25);
+						background: hsla(0,0,100,0.1);
+					}
+					&:hover {
+						background: hsla(0,0,100,0.2);
 					}
 				}
 			}
